--- a/src/Chat.html
+++ b/src/Chat.html
@@ -25,7 +25,7 @@
                                                                            for="settings__colors_blue"></label></div>
                     <div class="radio-wrapper"><input type="radio" id="settings__colors_green" data-colorID="rgba(0, 214, 0, 0.3)"
                                                       name="colors"><label style="background-color: rgba(0, 214, 0, 0.3)"
-                                                                           data-colorID=rgba(0, 214, 0, 0.3)"
+                                                                           data-colorID="rgba(0, 214, 0, 0.3)"
                                                                            for="settings__colors_green"></label></div>
                     <div class="radio-wrapper"><input type="radio" id="settings__colors_pink" data-colorID="rgba(255, 192, 203, 0.4)"
                                                       name="colors"><label style="background-color: rgba(255, 192, 203, 0.4)"
@@ -60,7 +60,7 @@
                                                                            for="register__colors_blue"></label></div>
                     <div class="radio-wrapper"><input type="radio" id="register__colors_green" data-colorID="rgba(0, 214, 0, 0.3)"
                                                       name="colors"><label style="background-color: rgba(0, 214, 0, 0.3)"
-                                                                           data-colorID=rgba(0, 214, 0, 0.3)"
+                                                                           data-colorID="rgba(0, 214, 0, 0.3)"
                                                                            for="register__colors_green"></label></div>
                     <div class="radio-wrapper"><input type="radio" id="register__colors_pink" data-colorID="rgba(255, 192, 203, 0.4)"
                                                       name="colors"><label style="background-color: rgba(255, 192, 203, 0.4)"
