--- a/src/Chat.html
+++ b/src/Chat.html
@@ -32,7 +32,7 @@
                                                                            data-colorID="rgba(255, 192, 203, 0.4)"
                                                                            for="settings__colors_pink"></label></div>
                 </div>
-                <input type="submit" value="Сохранить" class='registerFormSend'>
+                <input type="submit" value="Сохранить" class='settingsFormSend'>
             </form>
         </div>
         <div class="loginWindow">
